[package]
name = "ndarray-inverse"
version = "0.1.8"
edition = "2021"
authors = ["Chris Dipple <chris@intelligent-net.co.uk>"]
license = "MIT OR Apache-2.0"
description = "Pure Rust Inverse and Determinant trait for ndarray Array2"
homepage = "https://github.com/intelligentnet/ndarray-inverse"
repository = "https://github.com/intelligentnet/ndarray-inverse"
keywords = ["ndarray", "inverse", "determinant", "linear-algebra",  "matrix-operations"]
categories = ["mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
#ndarray-linalg = { version = "*", features = ["openblas"] }
#ndarray-linalg = { version = "*", features = ["netlib"] }
num-traits = "0.2"

[profile.release]
#strip = true
opt-level = 3
#opt-level = "s"
#lto = true
#panic = "abort"

